<resources>
    <string name="hello_blank_fragment" translatable="false">NEW FRAGMENT CREATED</string>

    <!-- App -->
    <string name="app_name" translatable="false">CarCare</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="cancel_message">Operation cancelled</string>

    <!-- Settings -->
    <string name="settings_vehicles_list_format">Vehicles list</string>
    <string name="settings_vehicles_list_format_normal">Compact view</string>
    <string name="settings_vehicles_list_format_detail">Expanded view</string>
    <string name="settings_aboutMe">About me</string>

    <!-- TopAppBar -->
    <string name="settings_title">Settings</string>
    <string name="logout_title">Close session</string>

    <!-- Detail Toolbar -->
    <string name="new_vehicle">New vehicle</string>
    <string name="edit_vehicle">Edit vehicle</string>
    <string name="new_provider">New provider</string>
    <string name="edit_provider">Edit provider</string>
    <string name="new_spent">New spent</string>
    <string name="edit_spent">Edit spent</string>

    <!-- BottomBar -->
    <string name="menu_vehicles">Vehicles</string>
    <string name="menu_providers">Providers</string>
    <string name="menu_spents">Spents</string>

    <!-- Vehicle Topbar -->
    <string name="sw_showAllVehicles">Show all vehicles</string>

    <!-- SnackBar -->
    <string name="snackBar_fieldsEmpty">You must fill in the fields correctly</string>
    <string name="snackBar_welcome">Welcome!</string>
    <string name="snackBar_inputError">Unable to log in</string>
    <string name="snackBar_registerUser_Successfully">User registered successfully</string>
    <string name="snackBar_selectCategoryBrandModel">Select category, brand and model</string>
    <string name="snackBar_noPermissions">The necessary permissions have not been granted</string>
    <string name="snackBar_callPermissionGranted">Call permission granted</string>

    <!-- onBoarding -->
    <string name="next_button">Next</string>
    <string name="get_started_button">Start</string>
    <string name="onBoarding_title_carcare">CarCare</string>
    <string name="onBoarding_text_carcare">Carcare is your application for managing your vehicle expenses.</string>
    <string name="onBoarding_title1">Vehicles</string>
    <string name="onBoarding_text1">Register all the vehicles you have, you can also manage the ones you have previously owned.</string>
    <string name="onBoarding_title2">Providers</string>
    <string name="onBoarding_text2">Add your service providers.</string>
    <string name="onBoarding_title3">Spents</string>
    <string name="onBoarding_text3">Add the expenses that arise from time to time.</string>

    <!-- Login -->
    <string name="login_button">Login</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="goRegister_button">Not registered? Do it now</string>

    <!-- About me -->
    <string name="aboutMe_author">Author: Juan Manuel Gutiérrez Mellado</string>
    <string name="aboutMe_profession">Frontend Developer Jr.</string>
    <string name="aboutMe_info">Multi-platform application and web application developer. Studies of Kotlin, HTML, CSS, Javascript, Java, MySQL. Knowledge of C, Python, PHP and AWS and Docker platforms.</string>
    <string name="aboutMe_gitHub">GitHub</string>
    <string name="aboutMe_linkedIn">LinkedIn</string>
    <string name="aboutMe_backButton">Back</string>

    <!-- Register -->
    <string name="label_register">Register</string>
    <string name="label_name">Name</string>
    <string name="label_surname">Surname</string>
    <string name="label_username">Username</string>
    <string name="label_repeatPassword">Repeat password</string>
    <string name="goLogin_button">Login</string>
    <string name="error_emptyFields">You can\'t leave empty fields</string>
    <string name="error_emailInvalid">Email not valid</string>
    <string name="error_passwordNotMatch">The password do not match</string>
    <string name="error_passwordWeak">The password is too weak</string>
    <string name="snackBar_showAll">All vehicles</string>
    <string name="snackBar_showAvailables">Available vehicles</string>

    <!-- No Items List -->
    <string name="vehiclesList_noVehicles">You must add some vehicle</string>
    <string name="providersList_noProviders">You must add some providers</string>
    <string name="spentsList_noSpents">You must add some spent</string>

    <!-- Vehicle -->
    <string name="vehicle_tab_availableVehicles">Available vehicles</string>
    <string name="vehicle_tab_allVehicles">All vehicles</string>
    <string name="vehicle_brand">Brand</string>
    <string name="vehicle_model">Model</string>
    <string name="vehicle_plate">Plate</string>
    <string name="vehicle_category">Category</string>
    <string name="vehicle_available">Available vehicle</string>
    <string name="vehicle_registrationDate">Registration date</string>
    <string name="vehicle_category_car">Car</string>
    <string name="vehicle_category_motorcycle">Motorcycle</string>
    <string name="vehicle_category_van">Van</string>
    <string name="vehicle_category_truck">Truck</string>
    <string name="vehicle_createVehicle_successfully">Vehicle created successfully</string>
    <string name="vehicle_createVehicle_error">Error in vehicle creation</string>
    <string name="vehicle_editVehicle_successfully">Vehicle edited successfully</string>
    <string name="vehicle_editVehicle_error">Error in vehicle edition</string>
    <string name="vehicle_deleteVehicle_successfully">Vehicle deleted successfully</string>
    <string name="vehicle_deleteVehicle_error">Error in vehicle deletion</string>
    <string name="vehicle_editVehicle_calendarTitle">Select vehicle registration date</string>
    <string name="item_vehicle_not_available">Not available</string>
    <string name="item_vehicle_not_all_fields">Complete all fields</string>

    <!-- Provider -->
    <string name="provider_category_workshop">Workshop</string>
    <string name="provider_category_gasStation">Gas station</string>
    <string name="provider_category_insuranceCompany">Insurance company</string>
    <string name="provider_category_ITV">ITV</string>
    <string name="provider_category_towTruck">Tow truck</string>
    <string name="provider_category_other">Other</string>
    <string name="provider_name">Name</string>
    <string name="provider_category">Category</string>
    <string name="provider_phone">Phone</string>
    <string name="provider_createProvider_successfully">Provider created successfully</string>
    <string name="provider_createProvider_error">Error in provider creation</string>
    <string name="provider_editProvider_successfully">Provider edited successfully</string>
    <string name="provider_editProvider_error">Error in provider edition</string>
    <string name="provider_deleteProvider_successfully">Provider deleted successfully</string>
    <string name="provider_deleteProvider_error">Error in provider deletion</string>

    <!-- Spents -->
    <string name="spents_numSpents">Nº Spents: %d</string>
    <string name="spents_totalSpents">Total spents: %.2f €</string>
    <string name="spent_createSpent_successfully">Spent created successfully</string>
    <string name="spent_createSpent_error">Error in spent creation</string>
    <string name="spent_editSpent_successfully">Spent edited successfully</string>
    <string name="spent_editSpent_error">Error in spent edition</string>
    <string name="spent_deleteSpent_successfully">Spent deleted successfully</string>
    <string name="spent_deleteSpent_error">Error in spent deletion</string>
    <string name="spent_input_providerName">Provider name</string>
    <string name="spent_input_amount">Amount</string>
    <string name="spent_input_observations">Observations</string>
    <string name="spent_input_spentDateButton">Spent date</string>
    <string name="spent_editSpent_calendarTitle">Select spent date</string>


    <!-- Generic add new item -->
    <string name="add_new_item">Add new item</string>

    <!-- Alert Dialog Messages -->
    <string name="alertDialog_logout_message">Do you want to log out and exit the application?</string>
    <string name="alertDialog_show_info_newVehicle_title">New vehicle</string>
    <string name="alertDialog_show_info_newVehicle_message">To create a new vehicle, enter the category, make, model and other data.</string>
    <string name="alertDialog_confirm_message">Confirm</string>
    <string name="alertDialog_newVehicle_title">Create new vehicle</string>
    <string name="alertDialog_newVehicle_message">Are you sure to create this new vehicle?</string>
    <string name="alertDialog_editVehicle_title">Edit vehicle</string>
    <string name="alertDialog_editVehicle_message">Are you sure to edit this vehicle?</string>
    <string name="alertDialog_deleteVehicle_title">Delete vehicle</string>
    <string name="alertDialog_deleteVehicle_message">Are you sure to delete this vehicle?</string>
    <string name="alertDialog_select_action">Select an action</string>
    <string name="alertDialog_deleteImage">Are you sure to delete the image?</string>
    <string name="alertDialog_icon_camera">Camera</string>
    <string name="alertDialog_icon_gallery">Gallery</string>
    <string name="alertDialog_provider_confirm_call">Sure you want to call %1$s?</string>

    <string name="alertDialog_newProvider_title">Create new provider</string>
    <string name="alertDialog_newProvider_message">Are you sure to create this new provider?</string>
    <string name="alertDialog_editProvider_title">Edit provider</string>
    <string name="alertDialog_editProvider_message">Are you sure to edit this provider?</string>
    <string name="alertDialog_deleteProvider_title">Delete provider</string>
    <string name="alertDialog_deleteProvider_message">Are you sure to delete this provider?</string>

    <string name="alertDialog_newSpent_title">Create new spent</string>
    <string name="alertDialog_newSpent_message">Are you sure to create this new spent?</string>
    <string name="alertDialog_editSpent_title">Edit spent</string>
    <string name="alertDialog_editSpent_message">Are you sure to edit this spent?</string>
    <string name="alertDialog_deleteSpent_title">Delete spent</string>
    <string name="alertDialog_deleteSpent_message">Are you sure to delete this spent?</string>

    <string name="settings_providers_list_format">Providers list</string>
    <string name="settings_providers_list_format_grid">Grid view</string>
    <string name="settings_providers_list_format_linear">List view</string>
    <string name="settings_providers_chart_size">Top providers chart size</string>
    <string name="settings_providers_chart_no_chart_title">No chart</string>

    <string name="content_description_vehicle_image">Vehicle image</string>
    <string name="spents_list_vehicleSelected">Select a vehicle</string>
    <string name="spent_createProvider_error">Error in provider creation</string>


</resources>
