<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.login.registerFragment.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/logoM"
                android:layout_height="@dimen/logoM"
                android:layout_marginTop="@dimen/marginM"
                android:layout_marginBottom="@dimen/marginXS"
                android:src="@drawable/logo_carcare_transparent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/registerCardView"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginS">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/empty_divider"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/marginS"
                    android:showDividers="middle">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/MaterialAlertDialog.Material3.Title.Text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_register"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:startIconContentDescription="Name"
                        app:startIconDrawable="@drawable/icon_user">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/re_it_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_name"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:startIconContentDescription="Surname"
                        app:startIconDrawable="@drawable/icon_user">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/re_it_surname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_surname"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:startIconContentDescription="Username"
                        app:startIconDrawable="@drawable/icon_verified">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/re_it_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_username"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:startIconContentDescription="Email"
                        app:startIconDrawable="@drawable/icon_mail">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/re_it_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_email"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:startIconContentDescription="Password"
                        app:startIconDrawable="@drawable/icon_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/re_it_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_password"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:startIconContentDescription="Repeat password"
                        app:startIconDrawable="@drawable/icon_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/re_it_repeatPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_repeatPassword"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/re_bt_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_register"
                        app:icon="@drawable/icon_file_edit" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/re_bt_login"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginS"
                android:text="@string/goLogin_button" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
